1.1.0/_sources/developers_guide/e3sm/init/generated/polaris.tasks.e3sm.init.topo.combine.CombineStep.rst.txt
polaris.tasks.e3sm.init.topo.combine.CombineStep
================================================

.. currentmodule:: polaris.tasks.e3sm.init.topo.combine

.. autoclass:: CombineStep

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~CombineStep.__init__
      ~CombineStep.add_dependency
      ~CombineStep.add_input_file
      ~CombineStep.add_output_file
      ~CombineStep.add_property_check
      ~CombineStep.check_properties
      ~CombineStep.constrain_resources
      ~CombineStep.get_name
      ~CombineStep.get_subdir
      ~CombineStep.process_inputs_and_outputs
      ~CombineStep.run
      ~CombineStep.runtime_setup
      ~CombineStep.set_resources
      ~CombineStep.set_shared_config
      ~CombineStep.setup
      ~CombineStep.validate_baselines
      ~CombineStep.work_path
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CombineStep.ANTARCTIC
      ~CombineStep.DATASETS
      ~CombineStep.GLOBAL
      ~CombineStep.cores
      ~CombineStep.gpus
      ~CombineStep.may_span_nodes
      ~CombineStep.min_cores
      ~CombineStep.min_gpus
   
   